tests/spec/format/snapshots/binary_division.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { 10 / 2 }"
---
fn test() {
  10 / 2
}
