tests/spec/format/snapshots/binary_greater_than.snap
---
source: tests/spec/format/mod.rs
description: "input: fn test() { a > b }"
---
fn test() {
  a > b
}
