tests/spec/format/snapshots/binary_greater_than_or_equal.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { a >= b }"
---
fn test() {
  a >= b
}
