tests/spec/format/snapshots/binary_no_spaces.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { 1+2*3 }"
---
fn test() {
  1 + 2 * 3
}
