tests/spec/format/snapshots/binary_not_equal.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { a != b }"
---
fn test() {
  a != b
}
