tests/spec/format/snapshots/binary_or.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { a || b }"
---
fn test() {
  a || b
}
