tests/spec/format/snapshots/binary_pipeline.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { x |> foo() |> bar() }"
---
fn test() {
  x
    |> foo()
    |> bar()
}
