tests/spec/format/snapshots/binary_pipeline_single.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { x |> foo() }"
---
fn test() {
  x |> foo()
}
